--- a/cluster/apps/home/zwave2mqtt/helm-release.yaml
+++ b/cluster/apps/home/zwave2mqtt/helm-release.yaml
@@ -34,15 +34,15 @@ spec:
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: "letsencrypt-prod"
         nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
-        nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
+        nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
       hosts:
-      - host: zwave.${SECRET_DOMAIN}
+      - host: "zwave.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - zwave.${SECRET_DOMAIN}
+        - "zwave.${SECRET_DOMAIN}"
         secretName: zwave-cert
     additionalVolumeMounts:
     - name: usb
