--- a/cluster/apps/kube-system/_pvc/nfs-backup.yaml
+++ b/cluster/apps/kube-system/_pvc/nfs-backup.yaml
@@ -14,7 +14,7 @@ spec:
     name: nfs-backup-pvc
   storageClassName: nfs
   nfs:
-    server: nas.${SECRET_DOMAIN}
+    server: "nas.${SECRET_DOMAIN}"
     path: "/mnt/tank/share/backups"
 ---
 apiVersion: v1
