--- a/cluster/apps/media/_pvc/media-nfs-home-ryan.yaml
+++ b/cluster/apps/media/_pvc/media-nfs-home-ryan.yaml
@@ -13,7 +13,7 @@ spec:
     name: media-nfs-home-ryan-pvc
   storageClassName: nfs
   nfs:
-    server: nas.${SECRET_DOMAIN}
+    server: "nas.${SECRET_DOMAIN}"
     path: "/mnt/tank/home/ryan"
 ---
 apiVersion: v1
