--- a/cluster/apps/network/external-dns/static-entries/r610-1-dns.yaml
+++ b/cluster/apps/network/external-dns/static-entries/r610-1-dns.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: network
 spec:
   endpoints:
-  - dnsName: r610-1.${SECRET_DOMAIN}
+  - dnsName: "r610-1.${SECRET_DOMAIN}"
     recordTTL: 180
     recordType: A
     targets:
