--- a/cluster/apps/network/external-dns/static-entries/traefik-dashboard-dns.yaml
+++ b/cluster/apps/network/external-dns/static-entries/traefik-dashboard-dns.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: network
 spec:
   endpoints:
-  - dnsName: traefik.${SECRET_DOMAIN}
+  - dnsName: "traefik.${SECRET_DOMAIN}"
     recordType: A
     targets:
     - 10.20.0.2
