--- a/cluster/apps/default/_pvc/nfs-backup-share.yaml
+++ b/cluster/apps/default/_pvc/nfs-backup-share.yaml
@@ -13,7 +13,7 @@ spec:
     name: nfs-backup-share-pvc
   storageClassName: nfs
   nfs:
-    server: nas-1.${SECRET_DOMAIN}
+    server: "nas-1.${SECRET_DOMAIN}"
     path: "/mnt/backup/share"
 ---
 apiVersion: v1
