--- a/cluster/apps/default/_pvc/nfs-pictures.yaml
+++ b/cluster/apps/default/_pvc/nfs-pictures.yaml
@@ -13,7 +13,7 @@ spec:
     name: nfs-pictures-pvc
   storageClassName: nfs
   nfs:
-    server: nas.${SECRET_DOMAIN}
+    server: "nas.${SECRET_DOMAIN}"
     path: "/mnt/tank/share/pictures"
 ---
 apiVersion: v1
