--- a/cluster/apps/default/bitwarden/helm-release.yaml
+++ b/cluster/apps/default/bitwarden/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
       repository: bitwardenrs/server
       tag: 1.21.0-alpine
     bitwardenrs:
-      domain: https://bitwarden.${SECRET_DOMAIN}
+      domain: "https://bitwarden.${SECRET_DOMAIN}"
       admin:
         existingSecret:
           enabled: true
