--- a/cluster/apps/home/home-assistant/kustomization.yaml
+++ b/cluster/apps/home/home-assistant/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 - home-assistant-helm-values.enc.yaml
+- home-assistant-code-server-secret.enc.yaml
 - home-assistant-postgresql-secret.enc.yaml
 - home-assistant-secrets.enc.yaml
 - helm-release.yaml
