--- a/cluster/apps/home/node-red/helm-release.yaml
+++ b/cluster/apps/home/node-red/helm-release.yaml
@@ -39,16 +39,16 @@ spec:
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
-        # nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
-        # nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
+        nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+        nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
       hosts:
-      - host: node-red.${SECRET_DOMAIN}
+      - host: "node-red.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - node-red.${SECRET_DOMAIN}
+        - "node-red.${SECRET_DOMAIN}"
         secretName: node-red-cert
     resources:
       requests:
