--- a/cluster/apps/media/_pvc/media-nfs-tank-share.yaml
+++ b/cluster/apps/media/_pvc/media-nfs-tank-share.yaml
@@ -13,7 +13,7 @@ spec:
     namespace: media
   storageClassName: nfs
   nfs:
-    server: nas.${SECRET_DOMAIN}
+    server: "nas.${SECRET_DOMAIN}"
     path: "/mnt/tank/share"
 ---
 apiVersion: v1
