--- a/cluster/apps/media/bazarr/helm-release.yaml
+++ b/cluster/apps/media/bazarr/helm-release.yaml
@@ -29,7 +29,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: bazarr.${SECRET_DOMAIN}
+      - host: "bazarr.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
