--- a/cluster/apps/media/jackett/helm-release.yaml
+++ b/cluster/apps/media/jackett/helm-release.yaml
@@ -31,7 +31,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: jackett.${SECRET_DOMAIN}
+      - host: "jackett.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
