--- a/cluster/apps/media/qbittorrent/helm-release.yaml
+++ b/cluster/apps/media/qbittorrent/helm-release.yaml
@@ -42,7 +42,7 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - host: qb.${SECRET_DOMAIN}
+      - host: "qb.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
