--- a/cluster/apps/media/radarr-uhd/helm-release.yaml
+++ b/cluster/apps/media/radarr-uhd/helm-release.yaml
@@ -29,14 +29,17 @@ spec:
         kubernetes.io/ingress.class: "nginx"
         kubernetes.io/tls-acme: "true"
         cert-manager.io/cluster-issuer: letsencrypt-production
+        nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+        nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
+
       hosts:
-      - host: radarr-uhd.${SECRET_DOMAIN}
+      - host: "radarr-uhd.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - radarr-uhd.${SECRET_DOMAIN}
+        - "radarr-uhd.${SECRET_DOMAIN}"
         secretName: radarr-uhd-cert
       additionalIngresses:
       - enabled: true
@@ -47,13 +50,13 @@ spec:
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
         hosts:
-        - host: radarr-uhd.${SECRET_DOMAIN}
+        - host: "radarr-uhd.${SECRET_DOMAIN}"
           paths:
           - path: /api
             pathType: Prefix
         tls:
         - hosts:
-          - radarr-uhd.${SECRET_DOMAIN}
+          - "radarr-uhd.${SECRET_DOMAIN}"
           secretName: radarr-uhd-cert
     persistence:
       config:
