--- a/cluster/apps/media/sabnzbd/helm-release.yaml
+++ b/cluster/apps/media/sabnzbd/helm-release.yaml
@@ -33,13 +33,13 @@ spec:
         nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
         nginx.ingress.kubernetes.io/auth-signin: "https://auth.${SECRET_DOMAIN}/oauth2/start"
       hosts:
-      - host: sabnzbd.${SECRET_DOMAIN}
+      - host: "sabnzbd.${SECRET_DOMAIN}"
         paths:
         - path: /
           pathType: Prefix
       tls:
       - hosts:
-        - sabnzbd.${SECRET_DOMAIN}
+        - "sabnzbd.${SECRET_DOMAIN}"
         secretName: sabnzbd-cert
       additionalIngresses:
       - enabled: true
@@ -47,7 +47,7 @@ spec:
         annotations:
           kubernetes.io/ingress.class: "nginx"
         hosts:
-        - host: sabnzbd.${SECRET_DOMAIN}
+        - host: "sabnzbd.${SECRET_DOMAIN}"
           paths:
           - path: /api
             pathType: Prefix
