--- a/cluster/apps/network/external-dns/static-entries/h2-0-dns.yaml
+++ b/cluster/apps/network/external-dns/static-entries/h2-0-dns.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: network
 spec:
   endpoints:
-  - dnsName: h2-0.${SECRET_DOMAIN}
+  - dnsName: "h2-0.${SECRET_DOMAIN}"
     recordTTL: 180
     recordType: A
     targets:
