--- a/cluster/apps/network/external-dns/static-entries/mgmt-dns.yaml
+++ b/cluster/apps/network/external-dns/static-entries/mgmt-dns.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: network
 spec:
   endpoints:
-  - dnsName: mgmt.${SECRET_DOMAIN}
+  - dnsName: "mgmt.${SECRET_DOMAIN}"
     recordTTL: 180
     recordType: A
     targets:
