--- a/cluster/apps/security/oauth2-proxy/helm-release.yaml
+++ b/cluster/apps/security/oauth2-proxy/helm-release.yaml
@@ -28,15 +28,15 @@ spec:
         external-dns.alpha.kubernetes.io/target: 10.20.0.2
         kubernetes.io/ingress.class: "nginx"
       hosts:
-      - auth.${SECRET_DOMAIN}
+      - "auth.${SECRET_DOMAIN}"
       tls:
       - hosts:
-        - auth.${SECRET_DOMAIN}
+        - "auth.${SECRET_DOMAIN}"
     config:
       existingSecret: oauth2-proxy-oidc-creds
     extraArgs:
       provider: oidc
-      oidc-issuer-url: https://dex.${SECRET_DOMAIN}
+      oidc-issuer-url: "https://dex.${SECRET_DOMAIN}"
       skip-provider-button:
       pass-authorization-header:
       pass-access-token: true
