--- a/cluster/apps/network/external-dns/static-entries/holthome-net.yaml
+++ b/cluster/apps/network/external-dns/static-entries/holthome-net.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: network
 spec:
   endpoints:
-  - dnsName: ${SECRET_DOMAIN}
+  - dnsName: "${SECRET_DOMAIN}"
     recordTTL: 180
     recordType: A
     targets:
