--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -5,69 +5,71 @@ metadata:
   name: home-assistant-secrets
   namespace: home
 data:
-  HASS_SECRET_LATITUDE: ENC[AES256_GCM,data:KL89MgbrUAvaBb4S,iv:lx4P+oQH5v3bKqjh5tp25lQGlxo1ixD2eML8+YIX16s=,tag:09f00DYM7budnir8QrsBog==,type:str]
-  HASS_SECRET_LONGITUDE: ENC[AES256_GCM,data:B35Y2r/3tZGGOZhF3+AdXQ==,iv:q+4MB53qACx2FjhTsQQk2f307aHhmZ4mrgJKCdrFQG8=,tag:Ch/wUF32qKBli8J/4u0r9Q==,type:str]
-  HASS_SECRET_ELEVATION: ENC[AES256_GCM,data:8zIMYB/2QGQ=,iv:bCzBrxkI2UgfEXibLdMzrMgkpXPhG/HFTfcKwZLJQKg=,tag:Ikgv+LTN2C1DwcadHv1yhw==,type:str]
-  HASS_EXTERNAL_URL: ENC[AES256_GCM,data:V96QPbEowXn6hVNhzZWfWSDt/rrg0NoxTXscZTaypG0=,iv:4XPWc1HhUl/E3X6TSEpK2FI2f/dMoOg/ZBa+9kndlMk=,tag:4Hh+oZ9yqBgHA7mCjAHAtQ==,type:str]
-  HASS_RECORDER_POSTGRESQL: ENC[AES256_GCM,data:Y8iMGTBCiQ3uzSwYmB1H19UBl32kkrkuSbcgHmFlEM5TAjgza2NJv3oRUiQyZF7Ip30AX+dnRU4+jaIBUvBhULxCCHJHsmoK/aSaeST2HzQ74Tv5C8qJqa74OMO1xEcS/1ImhNqisc9uoMhs3/h7mzedmbz4JHws,iv:qLqs4GQ97Ic52ImWZ407qCLntWpPkDZPH3Qonq0GsUI=,tag:gMlv8tnEKuS7+N9uruCJqQ==,type:str]
-  HASS_ECOBEE_API_KEY: ENC[AES256_GCM,data:MsV+hop0KA3ex65xWiGJE8jnowmB0eETCLANi8pY0Rf5AecYxg0cHDj29Lk=,iv:u7w0HMYAq6TaM/BYZG2Tw2Ad7yORUHqX4R7WAe45z3w=,tag:GAXt0B5dpa36qpNDFP9i9w==,type:str]
-  HASS_AUGUST_PASSWORD: ENC[AES256_GCM,data:dALZ1unbiAOQplAp8pQ4Xw==,iv:P3Q+j9BV1SPJMgO1UPTVrSwi3mzDCjxQefIonw/k8xU=,tag:MBiF8HM0EeuATnIPH6+nPQ==,type:str]
-  HASS_AUGUST_EMAIL: ENC[AES256_GCM,data:g/SjS5Xt/u1QFr+nN5EKjP+V7WDOktSX,iv:j0LPsMnZmzgO3Fe1B1XzQQZzKWpM7L5VjFsJD9idjBg=,tag:UEWvvRxaglfqKhgHhLxwOg==,type:str]
-  HASS_NEST_CLIENT_ID: ENC[AES256_GCM,data:ZjKO6g3DXQfqJETE6xqy7xQZN7B2GL65+bsjAdOFs3zwkUzCoDBSea4vNwpakhndrejr6eX7KMyO36V3MNN/CaSaQdFTYSb8c8g1v8CDmsB8ifvZA1RLn7UUeN5HgXTS,iv:27bk2JiR03kzkcgN/IT/dIHbguB8elyxCXM+pkovCiA=,tag:2fpOGGacSFrawFVB0ROZsA==,type:str]
-  HASS_NEST_CLIENT_SECRET: ENC[AES256_GCM,data:DiWVEwniHBl4NusiRMXFnpVoCsJv0umAOmLpqhYZFD4=,iv:DnU0AQJRDpaN6iSoTAyicpPWOyGDqwjIa40GWIX9fI4=,tag:etBYJOtuyXuEbOyWZDdtbw==,type:str]
-  HASS_NEST_PROJECT_ID: ENC[AES256_GCM,data:2OI3txxCjDKtbxNkI278u1Q3ssQqDvy6sQZd/2BiMPlpNUOqz4xyVoUgKnzZPktz,iv:kURoDEZMNOKje18VM7crU7eV3mzAnlYLGCO/GqL+lWo=,tag:TeuqDo3X8OUiIIRphNZKXA==,type:str]
-  HASS_NEST_SUBSCRIBER_ID: ENC[AES256_GCM,data:xS7gTHHG/PGWRzJvFFlDY0WilRpnFxHYkDnk8JcygFZTOn+Etqfm7qdX7nGJnXKA9N6jYARVlg0qwAPdqH6m5L8qVncrTCZpmXHFJA==,iv:rjKLj1mYHW+P7mHwy41P9LoCP8Ej6yowdJfUT2JvDto=,tag:KloUWNMLMrh5V9EJncpRbQ==,type:str]
-  HASS_SPOTIFY_CLIENT_ID: ENC[AES256_GCM,data:PDFoHnmqGgfk54kJO+vFRr5Dej9J5OKZ6+yhLPJr3iNY/YGODEQt4KH39s8=,iv:RbKKY3arrbFP4yVRvj39s7H8uSEJzOZ22R6WcZCAa74=,tag:a4kLZF4pxaQTblR68f36Uw==,type:str]
-  HASS_SPOTIFY_CLIENT_SECRET: ENC[AES256_GCM,data:IJvgdC0+1xcP7Urdocl/uImuIzao3YRf9S0++6C8TKRI/ouW7ZHlFuIn2/w=,iv:wX681lIeEMQsEEM5Wbz7QNrfX2BOsBZhgNOIiquQAlE=,tag:IiirZdEn0vbgGGCm7aE7bA==,type:str]
-  HASS_BASEMENT_BACK_DOOR_CAMERA_MAIN: ENC[AES256_GCM,data:+EmSGPfKlggdu7FnJn6t7xHe81ZLzpbn8rwhc6mDUJkHD0bhKdkYuKmQvfBjG3xbq40ZVriZKQCw6jCHQcOv/OjaeoIY7iiqLzpF47lINhi/xfiP/OhjE/iNXyy7dHoGj4MQwdGtYLYnrYs6VXhW316ab3XQiQrGNP+L1s3pTyz2OfzS,iv:/W5biXhFV3GhPPxFoart2hCsNBWv96jlM+jmFUvNEEA=,tag:hxHXd4W8zlw973jzsjfwhw==,type:str]
-  HASS_BASEMENT_BACK_DOOR_CAMERA_SUB: ENC[AES256_GCM,data:bABaggLEDxbY43Su0O1LtGn+Xb2hLKQh9/rxQFxU+iX+4BXfUpPsX9T3TmyOQHcFcJ9++3BzeyiLWFTrHrJRKz1hcKylXnK2dyRNRqURTn2ICojS3kWAx2JoN9NUW1Krbi0tat2nchT5MJG03XkKqvlh7yiliBaXDbEPwSwflejNTF9C,iv:UIceCNyB/VQe1/vULNnjtKGImhIYAsf5OUduj6w2QCU=,tag:chZi9r/c+MjdI1WRF00bOg==,type:str]
+  HASS_SECRET_LATITUDE: ENC[AES256_GCM,data:WVoy6C+7nO34GRB6,iv:ZsqlrIlZ37KctzZv/L9frZU34zenjvuXzd0efce/gBQ=,tag:t8dRP1fiso6Joxq/Z62ZOQ==,type:str]
+  HASS_SECRET_LONGITUDE: ENC[AES256_GCM,data:YkZZc9wsgVYbtVYuOzdSZA==,iv:u7N2qPrRb9Y8A3CwPkYgymjhud1CGy3w0x9K0/DWjYs=,tag:LcNBNirFmiYVTO8+l6AEFw==,type:str]
+  HASS_SECRET_ELEVATION: ENC[AES256_GCM,data:sa0js/9etck=,iv:I6W5tgiw5OLkWSAVDz8zz1k7Hi6BWN/0269S7SM0N0I=,tag:7umra/GOJrE69EXv5O1BCA==,type:str]
+  HASS_EXTERNAL_URL: ENC[AES256_GCM,data:eEFhKMSKX6OHWtXGHwiJ15ucE+OCZJvEKd9cIWx38Lk=,iv:QQgIzg8mYyLumNrYWoDE9rZCAqmloIF9C7MSw5YESIA=,tag:3HB7qOF1ObaSYzJKmpMGGg==,type:str]
+  HASS_RECORDER_POSTGRESQL: ENC[AES256_GCM,data:wu7TU/FKOlrqthNNkrI7yf98DVq0rXFND9APtVAKgm6rOeM1aR0o/P8ZwET/zN5APZ2eBg7yctJQ6VFzD3CmtF9z9AF59yc9TUY2eFqB3EriA4x3M5F7MbZ3t0FZnUpRENNLNkdisT8xX3yFzPnmkui7nUdpUmkw,iv:54vyaJcrHmyaAw2m/c1J8PnFUn11aHnPaUJkRU6Jf70=,tag:zqES3/+DMPkQUKR1Ciir8g==,type:str]
+  HASS_ECOBEE_API_KEY: ENC[AES256_GCM,data:GXDSoDcibP6HMyJP1tALSS3kluGt/84IhlssNl69wgGZ4hBSymROH3sAwWw=,iv:xMLpm22raTMoXnB0XGi3OxLIqr8y+TXj5TLGJXnqynI=,tag:3jIPWzrvo2kZ9Ze+0yS3Pw==,type:str]
+  HASS_AUGUST_PASSWORD: ENC[AES256_GCM,data:onJUOSSLAm5Mb7UaueSb5Q==,iv:POb6n7pnw7mvLRpEkmSiYPS9qq68ptVOkgytd5KI5gQ=,tag:ZjD9FzKYJOlOj3FpItkN5A==,type:str]
+  HASS_AUGUST_EMAIL: ENC[AES256_GCM,data:U2Bb9V17Jki8DeutncUeiKIfkZsVDC3h,iv:Eyip1qjKKZKkcjdMqORd+JH/rSybSEhVSNbeJCIhyXI=,tag:GgIbGvnobuJcvyqfOvwEKA==,type:str]
+  HASS_NEST_CLIENT_ID: ENC[AES256_GCM,data:MSNW4EtjnLdZP0Fy+oYD1WCY97mE3OCZ1VNkHD28EiDWRo3cOeSDXmuuRTRmHJNWWSg5vvGtia/u56o4HogQFkMTUYP0WA7jjtMbvJpNTlvkwBueGuydQcf8ewtJR27w,iv:21ua8BjIZne5YB4yIMRqqlKoUF3JA9SmNkRIThedVGE=,tag:QlvFNNgYDgjTa9pbu35jhQ==,type:str]
+  HASS_NEST_CLIENT_SECRET: ENC[AES256_GCM,data:L4QY8AA+GbBdtbxyLJL0jpY70MGLbaskO88UqBzPMhw=,iv:vKUOnksunKYlZvjZIEjKOSu85RyXk1oIWuG8lvlb64o=,tag:XFSfcn0fte5qMRLApXlYRg==,type:str]
+  HASS_NEST_PROJECT_ID: ENC[AES256_GCM,data:GSVbkQnzo85aO+P8hNsWQK28g2EtrBekIvFZW2tL68vPV+2FdlIFFGQ4/CaE0p0M,iv:Vt/of8svpKf0xT9AqLIVjmzdQbIdx+dVB1pt+Q9OREw=,tag:nO2La7ezmdvcf6yawwgXJg==,type:str]
+  HASS_NEST_SUBSCRIBER_ID: ENC[AES256_GCM,data:yUUCeHz/dxv2xlrvTQuAumnPEQa9hZ2xt7gXCw2c8PngBUR29xtCXVQtSyojT8MNHD78nwDJn2k/5RT1495rMtNbr/uICxQqGQj4NA==,iv:Jg3sFjwgJqkArSBza+9pKLsOQ1Cq8QBiNzmOpSxzT2w=,tag:7CTEiPOISQW2wccHhAi54A==,type:str]
+  HASS_SPOTIFY_CLIENT_ID: ENC[AES256_GCM,data:aFwgaEpkSxd0G/Eyl+V31ewV+dZfSZC82HV4YoPdzMzX1iZqSCpkzkxUN00=,iv:44JdmfpYSC/UigS044AFSO4Lw/jOScSPKqb/LlCKD6E=,tag:0NVNcoKKweAOOLyDVUjDeQ==,type:str]
+  HASS_SPOTIFY_CLIENT_SECRET: ENC[AES256_GCM,data:JTN5R84930F1oJs92llqwi4hfVYtwU6ynM1qacChqXP7k4eNnisc/QcI+6s=,iv:qxV3v268KLyP5/7dyxSa+/nXQpsS+Sxrqq+9+LXCasQ=,tag:sLg1EBZeIkFciHk41TfV6g==,type:str]
+  HASS_BASEMENT_BACK_DOOR_CAMERA_MAIN: ENC[AES256_GCM,data:ZNHPHPy14rwf4YPkSLxwhqNIP5FaiU2TUGWAJT1M/MPyt2jhGMQssH59u25YqROrk4DkH2/OxGncVx+Sgre6gmNMP6yXAXu1W/a2C7F4l1Vo9idhgb29m+MVE64DFclNryKrugXv60AAIIbhny/ppgUdhYceVLlThGDFaWHOpsecJ0N/,iv:odGcdedoPuyTxzZUBPa9HEs08byWkfwlsPeCMogCb2Q=,tag:N3hPtn4MaVuWFI1JAx9ExQ==,type:str]
+  HASS_BASEMENT_BACK_DOOR_CAMERA_SUB: ENC[AES256_GCM,data:ATObwXuwUVZyvYVcHEmrFSmte4keETmvspWZXiRSWaNvkUBWBPglsNWJIaHTbwnrQRZy9KN/OzEeobK3nvvNpWqvK+tJ33CjuFtYk19veHzrmSTWNbUjZ9AB1vNnfXGt6u2z1BnormRdG0h9IOk60cxhFup6WKvlzuLEeQRYTdBKUdIS,iv:iQyPWqliMfyGCrEvXl6xNSRg6kcnxkGUqEEjQuDk6rk=,tag:BzVo3CbaHDjTM57wfED5nw==,type:str]
+  HASS_SECRET_DARK_SKY_API_KEY: ENC[AES256_GCM,data:ZMPJtPIZHxo/ELMm4uisD2WQl3BhIFUAUWSDGK6vUtX20LvVWXCiyun2T18=,iv:5fPfbwBJhSRgcuu08GLBPl0jz/RTilWGH+Vup85es6Y=,tag:1OwOy7IdkMQGd89uhEZhSA==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
-  lastmodified: "2021-02-28T17:56:29Z"
-  mac: ENC[AES256_GCM,data:tgmvWZGmYrk9aIrMKzHbHBFYFdionlCk+LS3RjGZ0YNHKY5vxoUs6HlnufjtAo3FJt4PZZEPLGbeU8sWgeCXP0Ege2ylCEdc4e2BPs6nQEgpP/+3BFkQUlAyaNE3YY64v1YrqkFtWEDdKrYkbrGQ3eKlbOwqixg2+Iq3oMrxePI=,iv:aqJzVhREUjOav9Y8sWkNA0cz/XHrko7v0ch6xUruHtw=,tag:5bK9gKX639Hsq67FME6sZA==,type:str]
+  age: []
+  lastmodified: "2021-06-02T17:24:30Z"
+  mac: ENC[AES256_GCM,data:zM9htJKWPjHTfnswQPtaIfvfuy0ma2jjNB3khnSftr4rpLxxYEzpTiiqw2EFytt8zpEcqIb0BadW7hsxyM1aC4vP/dXVFmZh3BjLhjtoKBgkHvUD2DI0LhrDj2CYruxg8rgI/kfG4+7Kn++sKiavbwTW8mwc2BMBt0qqCMCeGa4=,iv:Z6Vfqjx6r2bMDM4H3R9NhGC/FOi5F/lfjZMJuMf+xrQ=,tag:pRTDmuexlOyM6oLXr1z6sQ==,type:str]
   pgp:
-    - created_at: "2021-02-28T17:56:28Z"
+    - created_at: "2021-06-02T17:24:29Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8AQ/7Bbc9QyOtu7fxjeIYn7rFuSzkTI679skO7fZRlEs4tcVg
-        S4u94kj3VCfhtHdT9PYl0CLpu5+zP79igfhUlCAOSblcgLIL+ljn2DB9tbbFSrJk
-        vypimOv/UsW9g49Dz0PULe3vsI2bn+6CAFwcYrfLWdf/Swn+SOXvvrgVHH6ia6IU
-        kErCtyIhFD4Z7Pub8NbIeXVf7/GOpi7tGENa4zUvNfPQqqSOTiSPuFhB2sVeDyeq
-        0Oa9jRkvz3dqIwGVJb+1w7yHKDD+E85hn4F1AKHCdH/axQ50zJnBXlZI55q3NYA+
-        uMYyqoHBLrlzRZTEWZTf1Wq6kijSAvETyVLUDi4B1M/OZVEDUNxHmYM32QTCnC7J
-        ioJkFY1AXfP4xlImBpMFPoyqWB8GyA1cTBeTN8nRrWxAZ5TzCm4UE3eFmyyQ9hUr
-        mg5TiZNR5AUEuDqSBHU+MO5YD+SO9PF3Fm5LtodgkbZ6pve4Ff/uWxWqOj1xlUh1
-        dYLJ7o3POb6aRtgagvfU4SeDSyBu7tvjyC4NpcNjoELO04RzevDwUwaMF9YqyG5O
-        NXAf7Upq0RnE8uOq7vRhVnn0ROtjtF96grruT8GGu7DU7qm5xva9vYLMkV8KK0cE
-        Q+XLtcG+D0UV3eL6yhY2LMpvevJCJC3l3ffVptptInIzorO+mHJjsnly+K0KTNLS
-        XgExuPeP0V+IzDsb9wR/kcu0+Dso+bDi3AQw73tN9C9Wuaq07DRBPlWkx/8AOsNc
-        rrV2byRYOLDn90rfNBOdPg0ZljwTZoMcPydrn/ltSL8aFX2p7TqGbn/dWmEizko=
-        =/cEk
+        hQIMA8oSIqtHvng8AQ/8D1gJZSLcc9BwrUvoL/ZIPOGuZm39uPSM0EM77j4g8e2H
+        RTkH3yHZQCnHV9jRJWiLNhStvzyrwP+kL2MQZDFzMBFqa5wkoit9vBYxhdHvAamJ
+        ehmhoAFOU3Cjke2L6W8G8hY/OQY7eFC8ylAifKauigzGHWL64T6c6Wi5rQZDCDZT
+        E0ArdX8FdE6Dullzw7vuSqBY8EL9FWKTOD3ZBttZSTk+Jr8ZvOPTONXK/uZdctDY
+        kKtXEU66a1icS4F057wBhWPm7NKChJYmPjtW7vnKn6r2xpYD3PBAjw9gFloEkfSW
+        e7R1AirHRf7jJiqlTAoCXj8f7/4/GvqwN7MGTaWwTKGMXFcomNY2v5MH0qk55UoT
+        Wa5rKS9zwcaY2cDaaMZLXy1bcjgW1QFOBsja4fKA/ruYmVWM6ZgxoSdlFNXpc/dw
+        IXYwvIHDsAglnzUcHSNLSCpVpZkX+9LDx145xOKpgmIJRUtgeicYb9OC5yhjVQ1o
+        zPuJFdAEo5813OC+7ef2S+hRlPXg9gLDMy+av/YH9v5O8eIZdwBYDUf0X9FSEi5Y
+        NHyvC0y9EYC+1WFrdK12x+wzw911hla9kTm6kOZVJkOzEC6g8gsa5xCWOJ5SamRn
+        LSKvjotxmTW34kVW2gYEAwVHXs60XMWn4eeGgWv3pv2C8nwJ9eHSiQYzYFShV3PS
+        XgH8axDYUd2vSmdm/4t/Oy99z6E49G4Xr1m7s1Gf4V7oaYcASzoZP7D9vOn7UxYV
+        DUEUH+gbAg79H4tRM8s0SMpnxh7/tXkSc2hqM16EYr3p+vBzcjN8FU0vtQ4hoII=
+        =pR2L
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-02-28T17:56:28Z"
+    - created_at: "2021-06-02T17:24:29Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4ARAAm/3vwenLTe3F2QaR6EduXzd89/hl3oA+51knN7LDtoxw
-        DD3Kc8CAA/vsKQSv26x+IyigdxUX5xEICPZ7TLk7oH/y/jqO39k7vhijDFxtGS3b
-        O6rbEZCPZ3jolV7ezMOZF1L73nKSBjLALty1FP0Qam0aaACvXlCK57uMiPLo45a1
-        NfIAhivn9dZ4uGTg3mwAein2WZ5zCPN2eyctt2wdn84zBhcIFflErYtE+juEobtP
-        y5KHrHk2IySnMHhDd6N9wrrArMmxNhBrs7dMKgez4ptUrTpqm29ilvwtTB9h+5xq
-        buxOoM/fRfbR+GoZ+ubCGXjBbjiCyZYZ+wwcgOaZMjR8ynk5bF0Jr29h82kzE3gE
-        2ClXra58MfgrHfLD9n6X2B6gObmtSdkufjMG1vyw/wpVZTXA9SkL5cuX0lrlWFyp
-        ACoFkQ48PrH+wDLiBS2xAYg/N9bAKT7CBx8cdM35izJEneFIX2HNXHupyc6Tik6F
-        5/PdEy+OM8OKGmMr++fkHdtYPqMxq+oeTVglp5XTwPMw9dwg6PaEaqGO+wLFOVYi
-        rHRyjKTNQBqMh7uvpSe7eOmK6kn3URaZWmcmD51zLjmP1Z7l3mGJpIiFtcXnJSF0
-        t87IdXxbREkiMzz1MAbxQvlmdgwywzOMy0eE0wHX8oy6Jsx4qdfpoIEBD7eaZaHS
-        XgE3rcepkVCC3pKYgS+cK0bOVG7r9B+te4IcbcNdnpT0zP1TG7kCoxTk0smMORIw
-        paInN+El/xN21mne9Xxi1+Z97W2l8bEQbnE1YBfnFuXSZTzKjiEM1GDZjKjnCPQ=
-        =eCBb
+        hQIMA8ORz3KkY6O4AQ//U7YIseptLFwaKbWYtWiPwIAcq2FftBS+hcAxKBqA4xRa
+        dmR4D78Jp9rTBcYLc6tiV4asSHapCbSXPZW8mLFI8Cs1aef5IK1LwQucpuKzrBfm
+        9QfScW5CnwSFcbeV4XG2olxNJan924V9JwecitMqpkmDAvEklCGMHWA5d0pURtfJ
+        fEpmjweirKIkhKcRcgy02c+6RXzBR1ug1HTPPJNFZaHXazqWwwl91QvfS0qRlj+k
+        G2P5rQ/BIi0K70gs5a5naBssrwFk/KtjTVQB62QaPTlrwAr6lAhYEtZ8FAjJ4d52
+        mh6OY0ovrqreamHHqfcmgxPZo0P62SJb9j9Jxhi9YJ888kdXbJEac2cXPXwCL22S
+        2Z6ymvCustqMjQLxKn+SiyCkbnDVxZvPgMrP6dLPvuZF33CQckH5KTZDFdbJ62cS
+        6CqFtt+4L2aIWdcQNuh+XKbCiQ8mmdAFI6n3S/k+Adv6Cf2RLs82U91Ry2+DZ5xs
+        dbWG4ZaCpGN0HpLRGKwdn3k5NsPl/mwLCZ5ltjX7fmKbRlEh0p2N7bS+MC0bBXfM
+        UVMI0H2YcTOXP6r3HfGVt9n9K6pirt+B+97L4fL63gXK4SQ+gWZgPNfevn4ElexT
+        +5UNcDV/UFCozs8RyVzzLyVzrSp1j3H0fXd+z3Gw9VlgWgTgLYhN0oUthBRzNWXS
+        XgF2pI+V52nJsCvNYjgIzTcXHrdFwMExv9stjUzb5Yn7q9V8GYLe3XikvWTJvl82
+        oLm7F6c1hvHOsmsSSs6rBMqWhnCohuTj0pp6kS58+DAfIONBHUJfZNBvysi8wtg=
+        =Zx8R
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
-  version: 3.6.1
+  version: 3.7.1
