it's not supposed to be an array

--- a/cluster/apps/network/coredns/helm-release.yaml
+++ b/cluster/apps/network/coredns/helm-release.yaml
@@ -27,8 +27,7 @@ spec:
       externalIPs:
       - "${SVC_COREDNS_ADDRESS_EXTERNAL}"
       externalTrafficPolicy: Local
-      clusterIP:
-      - "${SVC_COREDNS_ADDRESS_INTERNAL}"
+      clusterIP: "${SVC_COREDNS_ADDRESS_INTERNAL}"
     servers:
     - zones:
       - zone: "${SECRET_DOMAIN}."
