--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -5,5 +5,8 @@ resources:
 - ceph-block-pool.yaml
 - ceph-cluster.yaml
 - ceph-file-system.yaml
-- storage-class.yaml
+- ceph-block-storage-class.yaml
 - ceph-volume-snapshot-class.yaml
+- ceph-object-store.yaml
+- ceph-bucket-storage-class.yaml
+- ceph-object-bucket.yaml
