--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -38,7 +38,8 @@ spec:
         repository: docker.io/jimmidyson/configmap-reload
         tag: v0.5.0
     alertmanager:
-      alertmanagerSpec:
+      alertmanagerSpec: "prom-alert.${SECRET_DOMAIN}"
+        externalUrl: 
         storage:
           volumeClaimTemplate:
             spec:
@@ -66,23 +67,39 @@ spec:
           secretName: alertmanager-cert
       config:
         global:
+          slack_api_url: "${SECRET_ALERT_MANAGER_DISCORD_WEBHOOK}"
           resolve_timeout: 5m
+        receivers:
+        - name: 'null'
+        - name: 'discord'
+          slack_configs:
+          - channel: '#prometheus'
+            icon_url: https://avatars3.githubusercontent.com/u/3380462
+            username: 'Prometheus'
+            send_resolved: true
+            title: |-
+              [{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }} {{ else if ne .CommonAnnotations.message ""}}{{ .CommonAnnotations.message }} {{ else if ne .CommonAnnotations.description ""}}{{ .CommonAnnotations.description }} {{ else }}{{ .CommonLabels.alertname }}{{ end }}
+            text: >-
+              {{ range .Alerts -}}
+                *Alert:* {{ .Annotations.title }}{{ if .Labels.severity }} - `{{ .Labels.severity }}`{{ end }}
+              {{ if ne .Annotations.summary ""}}*Summary:* {{ .Annotations.summary }} {{ else if ne .Annotations.message ""}}*Message:* {{ .Annotations.message }} {{ else if ne .Annotations.description ""}}*Description:* {{ .Annotations.description }}{{ end }}
+              *Details:*
+                {{ range .Labels.SortedPairs }} • *{{ .Name }}:* `{{ .Value }}`
+                {{ end }}
+              {{ end }}
         route:
-          # group_by: ['alertname', 'job']
-          # group_wait: 30s
-          # group_interval: 5m
-          # repeat_interval: 6h
-          receiver: 'alertmanager-bot'
-          # routes:
-          #   - match:
-          #       alertname: Watchdog
-          #     receiver: 'null'
+          group_by: ['alertname', 'job']
+          group_wait: 30s
+          group_interval: 5m
+          repeat_interval: 6h
+          receiver: 'discord'
           routes:
-          - match:
-              alertname: Watchdog
-            receiver: 'null'
-          - receiver: 'pagerduty'
+          - receiver: 'null'
             match:
+              alertname: Watchdog
+          - receiver: 'discord'
+            match_re:
+              # severity: critical|warning
               severity: critical
             continue: true
         inhibit_rules:
@@ -90,12 +107,7 @@ spec:
             severity: 'critical'
           target_match:
             severity: 'warning'
-          # Apply inhibition if the alertname is the same.
           equal: ['alertname', 'namespace']
-        templates: ["*.tmpl"]
-      templateFiles:
-        pagerduty-custom.tmpl: |-
-          {{- define "pagerduty.custom.description" -}}[{{ .Status | toUpper }}{{ if eq .Status "firing" }}:{{ .Alerts.Firing | len }}{{ end }}] {{ if ne .CommonAnnotations.summary ""}}{{ .CommonAnnotations.summary }} {{ else if ne .CommonAnnotations.message ""}}{{ .CommonAnnotations.message }} {{ else if ne .CommonAnnotations.description ""}}{{ .CommonAnnotations.description }} {{ else }}{{ .CommonLabels.alertname }}{{ end }}{{- end -}}
     nodeExporter:
       serviceMonitor:
         relabelings:
@@ -151,6 +163,7 @@ spec:
           - "prom-server.${SECRET_DOMAIN}"
           secretName: prom-cert
       prometheusSpec:
+        externalUrl: "prom-server.${SECRET_DOMAIN}"
         # image:
         #   repository: quay.io/prometheus/prometheus
         #   tag: v2.20.0
