remove ssl for object store for now

--- a/cluster/core/rook-ceph/storage/ceph-object-store.yaml
+++ b/cluster/core/rook-ceph/storage/ceph-object-store.yaml
@@ -19,7 +19,7 @@ spec:
     type: s3
     sslCertificateRef:
     port: 80
-    securePort: 443
+    #securePort: 443
     instances: 1
   healthCheck:
     bucket:
