--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -5,61 +5,60 @@ metadata:
   name: thanos
   namespace: monitoring
 spec:
-  releaseName: thanos
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://kubernetes-charts.banzaicloud.com
+      # renovate: registryUrl=https://charts.bitnami.com/bitnami
       chart: thanos
-      version: 0.4.3
+      version: 3.17.8
       sourceRef:
         kind: HelmRepository
-        name: banzaicloud-charts
+        name: bitnami-charts
         namespace: flux-system
       interval: 5m
   values:
-    image:
-      repository: quay.io/thanos/thanos
-      tag: v0.20.2
     query:
-      replicaCount: 3
+      enabled: true
+      replicaCount: 2
       replicaLabels:
         - replica
-      http:
-        ingress:
-          enabled: true
-          annotations:
-            kubernetes.io/ingress.class: "nginx"
-            nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
-            # nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
-            # nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
-            kubernetes.io/tls-acme: "true"
-            cert-manager.io/cluster-issuer: letsencrypt-production
-          hosts:
-            - "thanos.${SECRET_DOMAIN}"
-          tls:
-            - hosts:
-                - "thanos.${SECRET_DOMAIN}"
-              secretName: thanos-cert
-    compact:
-      retentionResolution1h: 5y
-    objstore:
-      type: S3
+      dnsDiscovery:
+        sidecarsService: kube-prometheus-stack-thanos-discovery
+        sidecarsNamespace: monitoring
+      ingress:
+        enabled: true
+        annotations:
+          kubernetes.io/ingress.class: "nginx"
+          nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
+          # nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
+          # nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+        hosts:
+          - "thanos.${SECRET_DOMAIN}"
+        tls:
+          - hosts:
+              - "thanos.${SECRET_DOMAIN}"
+            secretName: thanos-cert
+    queryFrontend:
+      enabled: false
+    bucketweb:
+      enabled: true
+    compactor:
+      enabled: true
+    storegateway:
+      enabled: true
+    ruler:
+      enabled: false
+    metrics:
+      enabled: true
+      serviceMonitor:
+        enabled: true
+    objstoreConfig: |-
+      type: s3
       config:
-        bucket: "thanos"
-        endpoint: "minio.default.svc:9000"
-        region: ""
+        bucket: thanos
+        endpoint: minio.default.svc:9000
+        access_key: "${MINIO_ACCESS_KEY}"
+        secret_key: "${MINIO_SECRET_KEY}"
         insecure: true
-        signature_version2: false
-        #encrypt_sse: false
-        put_user_metadata: {}
-        http_config:
-          idle_conn_timeout: 0s
-          response_header_timeout: 0s
-          insecure_skip_verify: false
-        trace:
-          enable: false
-        part_size: 0
-  valuesFrom:
-    - kind: Secret
-      name: "thanos-helm-values"
