--- a/cluster/apps/monitoring/thanos/thanos-ceph-object-bucket.yaml
+++ b/cluster/apps/monitoring/thanos/thanos-ceph-object-bucket.yaml
@@ -5,5 +5,5 @@ metadata:
   name: thanos-ceph-bucket
   namespace: monitoring
 spec:
-  generateBucketName: thanos-ceph-bkt
+  bucketName: thanos
   storageClassName: rook-ceph-bucket
