--- a/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
+++ b/cluster/apps/monitoring/kube-prometheus-stack/helm-release.yaml
@@ -189,11 +189,13 @@ spec:
                 requests:
                   storage: 10Gi
         thanos:
-          image: quay.io/thanos/thanos:v0.20.2
-          version: v0.17.2
+          image: quay.io/thanos/thanos:v0.21.1
+          version: v0.21.1
           objectStorageConfig:
-            name: thanos
-            key: object-store.yaml
+            name: thanos-objstore-secret
+            key: objstore.yml
+      thanosService: 
+        enabled: true
     kube-state-metrics:
       fullnameOverride: kube-state-metrics
   valuesFrom:
