--- a/cluster/apps/monitoring/thanos/helm-release.yaml
+++ b/cluster/apps/monitoring/thanos/helm-release.yaml
@@ -27,19 +27,15 @@ spec:
         sidecarsNamespace: monitoring
       ingress:
         enabled: true
+        hostname: "thanos.${SECRET_DOMAIN}"
         annotations:
-          kubernetes.io/ingress.class: "nginx"
+          kubernetes.io/ingress.class: nginx
           nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8, 172.16.0.0/12, 192.168.0.0/16"
           nginx.ingress.kubernetes.io/auth-url: "https://auth.${SECRET_DOMAIN}/oauth2/auth"
           nginx.ingress.kubernetes.io/auth-signin: https://auth.${SECRET_DOMAIN}/oauth2/start
           kubernetes.io/tls-acme: "true"
           cert-manager.io/cluster-issuer: letsencrypt-production
-        hosts:
-          - "thanos.${SECRET_DOMAIN}"
-        tls:
-          - hosts:
-              - "thanos.${SECRET_DOMAIN}"
-            secretName: thanos-cert
+        tls: true
     queryFrontend:
       enabled: false
     bucketweb:
