--- a/cluster/apps/kasten-io/k10/helm-release.yaml
+++ b/cluster/apps/kasten-io/k10/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://charts.kasten.io
+      # renovate: registryUrl=https://charts.kasten.io/
       chart: k10
       version: 4.0.4
       sourceRef:
