--- a/cluster/apps/kube-system/democratic-csi/zfs-iscsi.yaml
+++ b/cluster/apps/kube-system/democratic-csi/zfs-iscsi.yaml
@@ -9,6 +9,7 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://democratic-csi.github.io/charts/
       chart: democratic-csi
       version: 0.6.3
       sourceRef:
