add kured secret

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,58 +5,59 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:IbIkopo+lN/fm2ku,iv:knTQ23mATPkvWOCBGrBhQMMGVwhTnUTAqw7FCeLMTUM=,tag:a8eI5GIM/Z8uQ0mPrOfXrA==,type:str]
-  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:h7spwqeYs5F7AeqwjF3gdLZjwrY=,iv:llaU13g4zHpf94msjgPOdQT4ZN4BRKWhyZoYoeclMNs=,tag:aHTdXVlfqQkMmNZ9C76Rlw==,type:str]
-  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:76mRL99uTmm4UH6thq5z/fKrabrBTDBZqqcxfuxiTQsil0GBhZJv8w==,iv:+a1+uq8EVRCVJJCTMnsx+Vhg8MQuBz1Lf5Cc0HJx1J8=,tag:b4viwYNBWCq/puDgZBMS3Q==,type:str]
-  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:ydED3/MEiRxVqFVra1DiErfRTng=,iv:1pmKZJog2EctwoAnYOmDhgbnvtgsRBcDycKJmFzV8O0=,tag:/1YYndjujjbl2ygHHEt+Dg==,type:str]
-  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:+V07u4rHgwa7ouHfYay/x50pcoT2BfAQ64096GZ5BizqOx97rKHy3w==,iv:TaB3X+sQVxHk1PvQmpRpXvEhDomGFvd7Zwy9n2+tcvM=,tag:mbXRPJkE5h/beAzWdXR6LQ==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:L3d12oGGxpvxowt8,iv:j+1MMWPG4Tof7pfrRR+jR65rsAwJeVMaeo4QKqZ85JU=,tag:5JsJBkc7f+fVQ9BgpQVvAg==,type:str]
+  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:AJ9RsO5c9OQ9A4WMWt/DkBRcYnE=,iv:jQ4cbXhTu2w1wSPTGIjSNUbEuFEYwj6YZlwRSvQ+HlA=,tag:9YJ982g1Yh5aRLsvdrRjpQ==,type:str]
+  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:qZN8qnxMy634JhuDq0PD+96gCuZmZjBYzbv1oRLex0Dw3WSF9hEJgQ==,iv:j3BEE6hPuVPtQRJkjaQmmQhNg7oTJBCCAiF3lUWYXhU=,tag:Rf0jNjSIlD8aE3BFOKPEJQ==,type:str]
+  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:aM3IHQmEkoG9WFzxVLwIsK+yxM4=,iv:7dVMP6hUuDsBf1RarwFxsCkNebe5Ngri3Q/C3SMWhks=,tag:43q7Ra0JP/YuOQMt8UQzXg==,type:str]
+  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:Fwv67I6nptFLesfsmfaTUnRVLgBV0KX9OycRdPV/cdpI+7czxfT2Sg==,iv:S9cQVc9CvPfcIazFSpQqO0fkyQnKwEcQ6GhXC2xSyt0=,tag:JSYg802yetWsiD5SOJHnrA==,type:str]
+  SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:SySWY18WGZVeEUVA9X1Y/wYwlUSLmEXmx9UwAQ85wFpYRFXJ2+EWLRZziQUUvBTiOzYJN74vHWlKCHCUJtlzWSngwzXvLGX1kJFlGKd3l9i3vbkstl2au+NKfNVcKmaBF39JJvqWefdjC2pWlRx66+WdpsNGlOsZ9Oahbl7x,iv:ZXERJmWyHs4oK7Q6JdqLH03trKEY8ftLg8uNXpsOWgQ=,tag:HU/MYrIRgSkqWWaTiVrsFw==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-07T20:35:42Z"
-  mac: ENC[AES256_GCM,data:RF5sKwaxtZHAQX9gavPijHzDeyOty3nDDyKvfcFRIDUP+R2UeyzYjeXdSjeV/LF/Ivuqun9rprHuraEcmB2Yw/zfku5QofPLlnb/352hWSOBeYRhhQPq0X05JfurfKaJXFcBPtLsL+Yukgjn3wooVN2AE1dgz4xaloIoBr8iwZI=,iv:GojeziI6AnRXhkmesymkyDNuWk7acVxNRT4zhX+u9qk=,tag:0rF0QynIXpZv//GGKKnYiw==,type:str]
+  lastmodified: "2021-06-10T15:47:01Z"
+  mac: ENC[AES256_GCM,data:1TVu+ECPV5BqI5CkZhHGzh3945XYp/t20jdBAe+sPBL1qWOzQhF3AH9cpUBr9fjqV30exsut83q4LhEYqkITYF58hRzYErZVMVqdLoHXITDY15/Wqwp/kUZLBh26V/RlHMgILO6zt2Dg867lt4FHfic58R8WLyeKGmFkzcOhIJY=,iv:Uddzh2NH4Q/8xlTe2XhUwXJARQ870JlQG5GKbvgXTtQ=,tag:EXqqY6/v+w1N1aHOGf1ikw==,type:str]
   pgp:
-    - created_at: "2021-06-07T20:35:42Z"
+    - created_at: "2021-06-10T15:47:01Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8ARAAnDZhHypHs/NaaiwBzayNiuX8f0uB3In7KyK/GaGA44sF
-        Mnyrm7VKlp1Cs/gbMg4NUcca7BgUpPWpVXxCfnQCMCu7ibw/CvArjfcmmmjqXfiA
-        SHXTg87INzog/CFXA/YAdj2KRUfdu0s7y8+jlfIVslHYoMmWVLmNq1OdOsovNxVM
-        wLh6pfLAUXg4tLVPUvrFHXnOlnEjearcvfifEV9opL0Ma/Ks5RtRC+TT/KaMxoDb
-        pX+i2w6+yVdvUrzdMHokgqtaeBfz7hjZIBqtAkcztwf0s5TjrtYEuW5D5ZDI/UUz
-        FHkhs5jmS6znVdyU9EAFwyrubNS5UClwEwiAnEt76x10UxjRPbvfR+unwasesAKm
-        xFufA4zxUxebg6WuoNW8nBfw1SFygwI7h6ZjR+mPO/+bMAQrBvtCKBB3jC/A8xWJ
-        lMmHrHbgPNbHgoCyVjY4wO4SlR3hv2ca+PiIEBxxC0hDVqWltkCKOllcJnSAanMT
-        DimXYVV6lX+zd1hSuGqd4nrt5YkPed1VsTvSOz967lUzxN6TlnJpr5suKlbJREfl
-        MQGOdMJGLc0DMibIeCxOkzotPhti1hooCwr+aBION2W5I7s+RlB1MwDJfLa5YUKe
-        PdgZaKq0tRPOLEObRFPjq6oXMaXIiibNmyRi97ETMa6Q75/fbgiuPT6vLONyCOrS
-        XgEP5l8i7ZR0ZmOYO3xzWCHra1MbI0OBVCKRxwQBGr/IWPMHppRHRhFF2iN1bFU4
-        ISrrYlANjzxpUcI+XCs7uhFkHWI55of5DJ++lTAUFIVqZGlXkTLReR/3pQ16SN8=
-        =LHcq
+        hQIMA8oSIqtHvng8AQ//V7e+6mGUEqNBZNvQqWo6KXE2SVzDfRY7K4MTtu9fXjYW
+        17emGjw5ibUjX97wCmEVt3wVWyCJ6pE0ub9d0FZpFU8v4UJANNuhk96pk0UYUe5C
+        le4ktyz/lp2CKVEyBQffNRyhnfCNc4tZgiqk5yhPvDJhcZBiS6d4gxknVeC7VCib
+        locGd1RvvVUthS8biJImGGla9pUy20ySy4xfCWDMEupurwS66Z/cIZH0IDAIvN9p
+        tdN+O4d5VPTfqE4pCh7sTWTEf4edpcsfVJwvItoKx2Dt8P8+Elmq2Rq1jMBk4TWZ
+        fOv2aEfOJOBwGMnzf/WNJwdWMMNpWm2GThqu7XsSWqZzF2WvC3IdfRju9g3fR32A
+        nmNzTnsf8HZAzAAALYP5SZTQ8zzGMSAvV18dIMxOxYOrJlhzrjk4q4I4wT7UIA/E
+        Fg4Zsq2/lmm8dhjg9492S0SBLLyYfOPeMUOML7wZMmSb4rhrXt2kxGyEYDoDgUoS
+        xzW0uFC0c8L4RWmi2+VTEX4dpnxVzw+APDVwpb1de3uzv4KE3bEWu7FLDSSVsjhS
+        DU7JHFZpWAknU3+h2p51dCaQsJA8YTK6mctjuCLzjAWOaoxoVXJJnQVwcX7iNUMt
+        J4Mgu5OTyJpNibvb81H1VtCih6nSzY77kbjeb9dTDVEi1PcSKF07+LLYrY425PDS
+        XgFex2WYWx+QHhuDNfBEAWY/Uzo6MWTRgGIjkR7xA/XJLpG4etE7xZAM3ayqQqi3
+        OitFBcYIx418c8OiuiKEFT45y+CyDorlSItlSKODznCkM46DjbutLACEXyfKHMY=
+        =lEcV
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-06-07T20:35:42Z"
+    - created_at: "2021-06-10T15:47:01Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4AQ/+NJ6aSi2Wx1ztH7OKGbAMEGssDKoM4j0nLcrOU81fLaPP
-        CLXveMlRD7Rhfx9a+2amRRuLDHeFyBDphpLt3y2fvSeTlt5jq71Rqf5NK88TwywH
-        lJvXzIL0Pby4txKnKvyYy8k0DwJ2ITJSuUeY1xf6FtQQKsrSqjBISWOuIhJS+H6B
-        sj/+6PhlXlysui3+C0PkKCbk07k8DtOPJBB9tt5q9LnkUdJwbisMaFjQ9+4YzTDx
-        0R9CGrlUsZggqwCqs3M0QUgsK9lNRy83bRuBmv28BHoG7khJU6IdPtPrpjv02AIW
-        bIIVLJ343ncCR3c5l24N7df/c63sStpMpmhZoWIAbs6EMWklLA0qB5Sqdhgcrd9o
-        mCG6Nf7fEGBr02mZyuKKagkq4dckbIlgK/RCDx4fcHxfEHw8mJ62YSSbGAyFHsqf
-        cr6vIE0QyQ1p2RVauinwpoAgwr0zyfsoLWvgvPw9M7gHM8G3mLdvgV7rSrpA1+gJ
-        aKS1AIR8dqX17qm7FdN2qYlbyzRTNpOGyCdIbS56tRZgmsoLqMYnrlROAnZDz4DK
-        SoHC5mDbbdE94LDV7ybmjdsM2TahervID/EGRoSmg5nhqphP288+b8DoapjfavN5
-        7+weygs7bpfFtytm53SPgcHormHXg7W0VUu/S/AhH4M0msCB2mH5YJaCUUA0dpDS
-        XgFwEoLx3GEaQVc1cQm9l7UJJQxSzmcMXvskdg/90rG2PEqrV2ywyZ5ZSLd84Ykx
-        AMYHKp8a1dQdxg5Xk+OeiwZR9AVhclxexQCNgoEHkVo5RtfHpIDtYGPhneEeqxs=
-        =pDSh
+        hQIMA8ORz3KkY6O4AQ/5AXofMw/iWvkkb3DaMLP6RNbFDZvlEnYDsBP6g3AptEzq
+        9HryvId5BuI8zW1O+q6llQs4vGXWDNUjfQ9rfiknERzkjt7ei6FCuznfn75dTSu+
+        IlJoX5ypK4L55foVBIcSvnDQVkCWsbT3JbrfmDfF8kIt9KOwYrucUPXZLPOtKL51
+        K4gf/pDN6p9hgeqBJfHP/wjrHu3r0b81VjZKVP8ERHi5QBKZC0ZskVMk5/T4IFLh
+        3juhfaDMuKBKx7LaO8V0P/PhgNhqvqHKAo57mcgH+WDcxHyvaqBmYRzF+m5VLksA
+        N28s7whFSeWWXh1pq/E1dQrqDqIDrp7hB/kXbo1bveBzhDiwlSMZapLaSq8zy9sk
+        fwVFF35Felf3RgGPm69b83paLyjYzPtjVSaVXJV8zmq5vv7Sx5nwn52aHv3RS/Cr
+        7bvXqEQ4y8UvI94fS6uEYqyiI+q03E0/BcPYeMPaGAQquyoZvTWUJ+6bNAqyve3E
+        Hjz0SV/5mYkGSQ0czD45wD78OK7upgbMEpxgla+ECzTvprinlsmWWPEzj2TCViwZ
+        lvantWXl+yBzVFZmYTFtFybwGpP058DvfIPuXP4gLd59AQ6l2lQCTY3wx7/rN+He
+        OVAXx6U72zzzOxQz/zQYac1Jfk6aeYSRgMOiKzRkwhKbs69g1aFE5V38SQigQu/S
+        XgG66zS+mxYkfUY5vP6q4bgiloPU/3Kce0o/OWUQYg+cnfyABGun+VBEEhFZwxFX
+        fahHRNNbuSvtIBw0ouY24nKTPMSSzvMpzslvj579VpxlfhdEWOvYn096nwozimM=
+        =3loo
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
